automatically backed up by learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -873,7 +873,7 @@
     }
    ],
    "source": [
-    "parsed_trips and distance_all(first_trip, parsed_trips[0:4])"
+    "parsed_trips and distance_all(first_trip, parsed_trips)"
    ]
   },
   {
